# pokemon_star_challenge

./: README.md  pyproject.toml
doc/: requirement.txt
input/: pool.csv  relation_0_3.csv
output/: relation.csv
src/: app.py  main.py  pool.py  selection.py  selection_test.py  type_relation.py
tests/: api_test.py  conftest.py  pokemon_test.py  prepare_test.py  selection_test.py
