[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "star_challenge"
version = "0.1.0"
description = "スター団チャレンジ用構築評価プログラム"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "pulp",
    "pytest",
    "flask",
    "timeout-decorator",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]